traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:21: error: not found: value Direction
  if (getDirection()==Direction.est){
                      ^